--- a/notebooks/Interstellar Planner.ipynb
+++ b/notebooks/Interstellar Planner.ipynb
@@ -14,231 +14,13 @@
     "from scimath.units.time import years as yr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "from src.constants import G, c, solar_mass, g\n",
+    "from src.utils import v_escape_solar\n",
+    "from src.engine import Engine\n",
+    "from src.starship import Starship\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = 6.674e-11 * m**3 / kg / s**2\n",
-    "c = 299792458 * m / s\n",
-    "solar_mass = 1.98847e30 * kg\n",
-    "g = 9.81 * m / (s**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def v_escape_solar(departure_distance):\n",
-    "    v = (2 * G * solar_mass / departure_distance)**0.5\n",
-    "    return v"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Engine:\n",
-    "    \"\"\"An engine to accelerate a Starship.\n",
-    "    \n",
-    "    This assumes constant accelerations and nonrelativistic speeds.\n",
-    "    \"\"\"\n",
-    "    def __init__(self,\n",
-    "                 fuel_mass,\n",
-    "                 exhaust_velocity = 500 * km / s,\n",
-    "                 ):\n",
-    "        self.fuel_mass = fuel_mass\n",
-    "        self.exhaust_velocity = exhaust_velocity\n",
-    "        \n",
-    "    def burn_fuel(self, burnt_fuel_mass, starship_mass):\n",
-    "        \"\"\"Return the change in velocity after burning burnt_fuel_mass for a ship with mass starship_mass.\"\"\"\n",
-    "        if burnt_fuel_mass / kg > self.fuel_mass / kg:\n",
-    "            raise ValueError(f\"Not enough fuel for this maneuver. Requested {burnt_fuel_mass} of {self.fuel_mass}.\")\n",
-    "        delta_v = self.exhaust_velocity * np.log(starship_mass / (starship_mass - burnt_fuel_mass))\n",
-    "        self.fuel_mass -= burnt_fuel_mass\n",
-    "        return delta_v\n",
-    "    \n",
-    "    def set_target_delta_v(self, delta_v, starship_mass):\n",
-    "        final_mass = starship_mass * np.exp(-1 * np.abs(delta_v) / self.exhaust_velocity)\n",
-    "        delta_fuel_mass = starship_mass - final_mass\n",
-    "        _ = self.burn_fuel(delta_fuel_mass, starship_mass)\n",
-    "        if self.fuel_mass / kg < 0:\n",
-    "            raise ValueError(f\"Note enough fuel for this maneuver. Requested {delta_fuel_mass} of {self.fuel_mass + delta_fuel_mass}.\")\n",
-    "            \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Starship:\n",
-    "    \"\"\"A Starship that uses engines to accelerate.\"\"\"\n",
-    "    def __init__(self,\n",
-    "                 payload_mass,\n",
-    "                 engines: dict,\n",
-    "                 initial_velocity = 0 * m / s,\n",
-    "                 initial_position = 0 * km,\n",
-    "                 initial_time = 0 * s,\n",
-    "                 destination_distance = 4.244 * ly\n",
-    "                 ):\n",
-    "        self.payload_mass = payload_mass\n",
-    "        self.engines = engines\n",
-    "        self.velocity = initial_velocity\n",
-    "        self.position = initial_position\n",
-    "        self.time = initial_time\n",
-    "        self.destination_distance = destination_distance\n",
-    "        self.history = list()\n",
-    "        self.log_messages = list()\n",
-    "        self.log_entry()\n",
-    "        \n",
-    "        \n",
-    "    def log_entry(self, message: str = ''):\n",
-    "        new_log = {'time': self.time,\n",
-    "                   'position': self.position,\n",
-    "                   'velocity': self.velocity,\n",
-    "                   'fuel_mass': self.fuel_mass()}\n",
-    "        self.history.append(new_log)\n",
-    "        self.log_messages.append(message)\n",
-    "        \n",
-    "    def total_mass(self):\n",
-    "        return self.payload_mass + self.fuel_mass ()\n",
-    "    \n",
-    "    def fuel_mass(self):\n",
-    "        mass = sum([(e.fuel_mass / kg) for e in self.engines.values()]) * kg\n",
-    "        return mass\n",
-    "        \n",
-    "    def accelerate(self,\n",
-    "                   engine_name = 'main',\n",
-    "                   target_velocity = 0 * km / s, \n",
-    "                   fuel_mass = None,\n",
-    "                   decelerate = False,\n",
-    "                   acceleration = g):\n",
-    "        \"\"\"Accelerate the ship by burning a specified quantity of fuel.\n",
-    "        \n",
-    "        If no fuel mass is specified, a target_velocity should be specified instead.\n",
-    "        \n",
-    "        Args:\n",
-    "            target_velocity: unit (speed)\n",
-    "                Target velocity to accelerate to.\n",
-    "            fuel_mass: unit (mass)\n",
-    "                Amount of fuel mass to burn\n",
-    "            decelerate: bool\n",
-    "                If True, acceleration is toward the origin. If False, acceleration is toward the destination\n",
-    "                \n",
-    "        Returns:\n",
-    "            unit (speed)\n",
-    "                New velocity of the starship\n",
-    "        \"\"\"\n",
-    "        if fuel_mass is not None:\n",
-    "            delta_v = self.engines[engine_name].burn_fuel(fuel_mass, self.total_mass())\n",
-    "            delta_t = np.abs(delta_v) / g\n",
-    "            self.time += delta_t\n",
-    "            if decelerate:\n",
-    "                delta_pos = self.velocity * delta_t - 0.5 * acceleration * delta_t ** 2\n",
-    "                self.velocity -= delta_v\n",
-    "            else:\n",
-    "                delta_pos = self.velocity * delta_t + 0.5 * acceleration * delta_t ** 2\n",
-    "                self.velocity += delta_v\n",
-    "            self.time += np.abs(delta_v) / g\n",
-    "            self.position += delta_pos\n",
-    "            \n",
-    "        \n",
-    "        else:\n",
-    "            self.engines[engine_name].set_target_delta_v(self.velocity - target_velocity, self.total_mass())\n",
-    "            delta_v = target_velocity - self.velocity\n",
-    "            delta_t = np.abs(delta_v) / g\n",
-    "            if decelerate:\n",
-    "                delta_pos = self.velocity * delta_t - 0.5 * acceleration * delta_t ** 2\n",
-    "            else:\n",
-    "                delta_pos = self.velocity * delta_t + 0.5 * acceleration * delta_t ** 2\n",
-    "            self.time += delta_t\n",
-    "            self.velocity = target_velocity\n",
-    "            self.position += delta_pos\n",
-    "            \n",
-    "        if abs(self.velocity / c) > 0.5:\n",
-    "            raise NotImplementedError(\"This ship is travelling at reletivistic speeds. This is not currently supported.\")\n",
-    "            \n",
-    "        self.log_entry(\n",
-    "            f\"year {(self.time - delta_t) / yr:0.1f} - Acceleration: {acceleration / g:0.1f} g for {delta_t / yr:0.2e} years. \"\n",
-    "            f\" New velocity is {self.velocity / c:0.2e} c. \"\n",
-    "            f\" {self.fuel_mass() / kg:0.2e} kg of fuel remaining.\"\n",
-    "        )\n",
-    "            \n",
-    "        return self.velocity\n",
-    "    \n",
-    "    def cruise(self, distance):\n",
-    "        if self.velocity == 0:\n",
-    "            raise ValueError(f\"The starship is not moving. Can't cruise.\")\n",
-    "        delta_pos = distance * np.sign(self.velocity / (m / s))\n",
-    "        delta_t = np.abs(distance / self.velocity)\n",
-    "        self.position += delta_pos\n",
-    "        self.time += delta_t\n",
-    "        self.log_entry(\n",
-    "            f\"year {(self.time - delta_t) / yr:0.1f} - Cruise: {delta_t / yr:0.2e} years to complete. \"\n",
-    "            f\"Distance={distance / ly:0.2e} lightyears\")\n",
-    "        \n",
-    "    def wait(self, time):\n",
-    "        self.time += time\n",
-    "        distance = self.velocity * time\n",
-    "        self.position += distance\n",
-    "        self.log_entry(\n",
-    "            f\"year {(self.time - time) / yr:0.1f} - Waited: {time / yr:0.2e} years. \"\n",
-    "            f\"Distance={distance / ly:0.2e} lightyears\")\n",
-    "        \n",
-    "    def print_history(self):\n",
-    "        for log, message in zip(self.history, self.log_messages):\n",
-    "            log = log.copy()\n",
-    "            \n",
-    "            print()\n",
-    "            print(message)\n",
-    "            print(log)\n",
-    "        \n",
-    "    def parse_logs(self):\n",
-    "        positions = []\n",
-    "        velocities = []\n",
-    "        fuels = []\n",
-    "        times = []\n",
-    "        for log in self.history:\n",
-    "            positions.append(log['position'] / ly)\n",
-    "            velocities.append(log['velocity'] / c)\n",
-    "            fuels.append(log['fuel_mass'] / kg)\n",
-    "            times.append(log['time'] / yr)\n",
-    "        return positions, velocities, fuels, times\n",
-    "        \n",
-    "    def plot_history(self):\n",
-    "        positions, velocities, fuels, times = self.parse_logs()\n",
-    "        fig = plt.figure(figsize=(12, 12))\n",
-    "        plt.subplot(311)\n",
-    "        plt.plot(times, velocities)\n",
-    "        plt.xlabel('Time (years)')\n",
-    "        plt.ylabel('Velocity (c)')\n",
-    "        plt.subplot(312)\n",
-    "        plt.plot(times, fuels)\n",
-    "        plt.xlabel('Time (years)')\n",
-    "        plt.ylabel('Fuel Mass (kg)')\n",
-    "        plt.subplot(313)\n",
-    "        plt.plot(times, positions)\n",
-    "        plt.xlabel('Time (years)')\n",
-    "        plt.ylabel('Position (light years)')\n",
-    "        plt.hlines(self.destination_distance / ly, \n",
-    "                   min(times),\n",
-    "                   max(times),\n",
-    "                   label='Destination',\n",
-    "                   linestyles='dashed')\n",
-    "        plt.legend()\n",
-    "        return fig\n",
-    "        "
    ]
   },
   {
@@ -252,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -295,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-38-1c9e92bbb860>:2: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "<ipython-input-3-1c9e92bbb860>:2: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -326,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -393,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-42-1c9e92bbb860>:2: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "<ipython-input-6-1c9e92bbb860>:2: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -424,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
